# kubernetes-monitoring-python

./: CHANGELOG.md  README.md  kubernetes_monitoring.py  pyproject.toml
tests/: test_kubernetes_monitoring.py
