[project]
name = "monitoring-kubernetes"
version = "1.5.0"
description = "monitoring kubernetes with python"
authors = [
    { name = "KKamJi", email = "xowl5460@naver.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "kubernetes>=32.0.1",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Error, Flake8, Warnings, isort
ignore = ["E501"] # Line too long, handled by formatter

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ['build/']
